# rixin-contract-extra

./: .gitignore  DEPLOY.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a1b2c3d4e5f_sqlite_task_queue.py  520bece3496b_add_contract_models.py  7d8e9f0a1b2c_add_rule_violations_and_field_contract_type.py  a1b2c3d4e5f6_add_field_definitions.py  b2c3d4e5f6a7_add_clause_hierarchy_and_source_refs.py  c3d4e5f6a7b8_remove_field_category.py  d4e5f6a7b8c9_drop_contract_risks.py  e5f6a7b8c9d0_add_contract_clause_page_end.py  f6a7b8c9d0e1_add_extracted_field_page_end.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/api/: contract.py  deps.py  field_definition.py  review.py  router.py  task.py
backend/app/extraction/: base.py
backend/app/models/: __init__.py  contract.py  field_definition.py  ocr.py  review.py  rule_violation.py  task.py
backend/app/schemas/: task.py  (+2 more)
backend/data/: extraction_examples.jsonl
backend/tests/: conftest.py  test_attach_source_bboxes.py  test_auth.py  test_clause_service.py  test_contract_api.py  test_file_service_pages.py  test_llm_chunking.py  test_llm_service.py  test_ocr_markdown.py  test_ocr_service.py  test_paddle_ocr_provider.py  test_pipeline_wiring.py  test_ppocr_provider.py  test_ppstructurev3_provider.py  test_rasterize.py  test_review_api.py  test_review_phase9.py  test_risk_service.py  test_rule_violation_model.py  test_services.py  test_task_api.py  test_validation_service.py  test_violation_api.py  test_violation_service.py
(+87 files in other folders)
