[project]
name = "rixin-contract-extract"
version = "0.1.0"
description = "Contract key information extraction system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "python-multipart>=0.0.18,<1",
    "pydantic-settings>=2.7,<3",
   "pydantic>=2.10,<3",
    "httpx>=0.28",
    "PyMuPDF>=1.24",
    "python-ulid>=3.0,<4",
    "python-magic>=0.4,<1;sys_platform!='win32'",
    "pillow>=11.0,<12",
    "instructor>=1.7,<2",
    "openai>=1.55,<2",
    "dspy-ai>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
